--- a/src/CSS/bootstrap.css
+++ b/src/CSS/bootstrap.css
@@ -44,6 +44,13 @@ video {
   display: inline-block;
   vertical-align: baseline;
 }
+
+
+.text{
+  padding-top: 50px;
+}
+
+
 audio:not([controls]) {
   display: none;
   height: 0;
